# ota-update-compiler

./: .install.dot  .main.dot  .sourceTrusted.dot  .updateFirmware.dot  .verifySignature.dot  CD Project Plan.docx  CMakeLists.txt  FINAL_VALIDATION_REPORT.md  LICENSE  Makefile  README.md  WEB_INTERFACE_COMPILER_FLOW.md  WEEK11_BUG_FIX_DOCUMENTATION.md  WEEK11_TEST_CASE_SUITE.md  WEEK11_TEST_RESULTS_AND_FAILURE_ANALYSIS.md  WEEKLY_PLAN.md  ota-compile.sh  secure-clang  secure_log.txt
ast/: UpdateASTPass.cpp  UpdateASTtraversal.cpp
llvm-pass/: CMakeLists.txt  TraversalPass.cpp
pass/: TraversalPass.cpp
scripts/: run_policy_matrix.ps1  run_policy_matrix.sh
tests/: insecure.c  insecure.ll  insecure.out  insecure_rule_aliases_missing_verify.c  insecure_rule_logging.c  insecure_rule_logging.ll  insecure_rule_logging_puts.c  insecure_rule_rollback_equal_allowed.c  insecure_rule_rollback_missing.c  insecure_rule_rollback_missing.ll  insecure_rule_signature_missing.c  insecure_rule_signature_missing.ll  insecure_rule_source_missing.c  insecure_rule_source_missing.ll  insecure_rule_weak_crypto.c  insecure_rule_weak_crypto.ll  insecure_rule_weak_md5.c  secure.bc  secure.c  secure.ll  secure_rule_aliases.c  secure_rule_logging.c  secure_rule_logging.ll  secure_rule_multistage_checks.c  secure_rule_no_install_path.c  secure_rule_rollback.c  secure_rule_rollback.ll  secure_rule_rollback_alt_form.c  secure_rule_signature.c  secure_rule_signature.ll  secure_rule_source.c  secure_rule_source.ll  secure_rule_weak_crypto.c  secure_rule_weak_crypto.ll
web-demo/: app.py  (+1 more)
(+3 files in other folders)
